--- a/ezlearning-frontend/UI/cart.html
+++ b/ezlearning-frontend/UI/cart.html
@@ -7,10 +7,12 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="icon" href="res/icons/logos/favicon.png" />
     <link href="res/css/styles.css" rel="stylesheet" type="text/css">
+    <link href="res/css/check-out.css" rel="stylesheet" type="text/css">
+    <link href="res/css/cart.css" rel="stylesheet" type="text/css">
     <link href="res/css/tile.css" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
         crossorigin="anonymous">
-    <title>Tạo khóa học</title>
+    <title>Giỏ hàng</title>
 </head>
 
 <body style="position: relative;">
@@ -119,64 +121,125 @@
         <!--Title-->
 
         <div class="page-title">
-            Tạo hóa học
-            <button id="checkout-submit" class="big-button" style="width: 150px; float: right">TẠO</button>
+            Giỏ hàng
         </div>
 
         <!--Content-->
 
-        <div id="course-content">
+        <div id="order-content">
 
-            <div class="box-content" style="margin-top: 0px; padding-left: 100px; padding-right: 100px; margin-bottom: 25px;">
-                <div class="containter">
-                    <div class="row">
-                        <div class="col-sm-6" style="padding-right: 50px;">
-                            <label class="label-normal">Danh mục</label>
-                            <div>
-                                <select class="select-custom">
-                                    <option value="0">Chọn danh mục:</option>
-                                    <option value="1">Audi</option>
-                                    <option value="2">BMW</option>
-                                    <option value="3">Citroen</option>
-                                    <option value="4">Ford</option>
-                                    <option value="5">Honda</option>
-                                    <option value="6">Jaguar</option>
-                                    <option value="7">Land Rover</option>
-                                    <option value="8">Mercedes</option>
-                                    <option value="9">Mini</option>
-                                    <option value="10">Nissan</option>
-                                    <option value="11">Toyota</option>
-                                    <option value="12">Volvo</option>
-                                </select>
+            <!--Cart-->
+
+            <div class="co-section-title">Giỏ hàng</div>
+
+            <div style="margin-top: -20px;">
+                <div class="row">
+                    <div class="col-sm-8">
+                        <div class="box-content cart-item">
+                            <div class="row">
+                                <div class="col-sm-4 no-padding">
+                                    <div class="course-cover-cart">
+                                        <img src="res/imgs/courses/course5.png" class="course-cover-cart-img">
+                                    </div>
+                                </div>
+                                <div class="col-sm-8 cart-item-info" style="padding-right: 0px">
+                                    <div class="row">
+                                        <div class="col-sm-11">
+                                            <span class="cart-item-title">
+                                                Nhập môn ngôn ngữ lập trình Javascript
+                                            </span>
+                                        </div>
+                                        <div class="col-sm-1">
+                                            <img src="res/icons/lecture-create/delete.png" width="16px" class="btn-img">
+                                        </div>
+                                    </div>
+                                    <div class="row" style="margin-top: 5px; bottom: 0; width: 100%; position: absolute;">
+                                        <div class="col-sm-6">
+                                            <img src="res/imgs/teachers/teacher2.png" class="cart-item-ava">
+                                            <span class="cart-item-name">Phan Văn Luân</span>
+                                        </div>
+                                        <div class="col-sm-6 text-right no-padding">
+                                            <span class="cart-item-price">599,000</span>
+                                        </div>
+                                    </div>
+                                </div>
                             </div>
                         </div>
-                        <div class="col-sm-6" style="padding-left: 50px;">
-                            <label class="label-normal">Tên khóa học</label>
-                            <input class="input-normal" type="text" placeholder="Nhập tên khóa học">
+                        <div class="box-content cart-item">
+                            <div class="row">
+                                <div class="col-sm-4 no-padding">
+                                    <div class="course-cover-cart">
+                                        <img src="res/imgs/courses/course5.png" class="course-cover-cart-img">
+                                    </div>
+                                </div>
+                                <div class="col-sm-8 cart-item-info" style="padding-right: 0px">
+                                    <div class="row">
+                                        <div class="col-sm-11">
+                                            <span class="cart-item-title">
+                                                Nhập môn ngôn ngữ lập trình Javascript
+                                            </span>
+                                        </div>
+                                        <div class="col-sm-1">
+                                            <img src="res/icons/lecture-create/delete.png" width="16px" class="btn-img">
+                                        </div>
+                                    </div>
+                                    <div class="row" style="margin-top: 5px; bottom: 0; width: 100%; position: absolute;">
+                                        <div class="col-sm-6">
+                                            <img src="res/imgs/teachers/teacher2.png" class="cart-item-ava">
+                                            <span class="cart-item-name">Phan Văn Luân</span>
+                                        </div>
+                                        <div class="col-sm-6 text-right no-padding">
+                                            <span class="cart-item-price">599,000</span>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
+
+                        <!--Voucher-->
+
+                        <div class="box-content" style="padding: 15px 20px !important; margin-bottom: 50px;">
+                            <div class="row">
+                                <div class="col-sm-6 voucher-tit">
+                                    Mã khuyến mãi
+                                </div>
+                                <div class="col-sm-6" style="text-align: right;">
+                                    <input class="input-small" type="text" style="width: 65%;">
+                                    <button class="small-btn" style="margin-left: 10px;">Nhập</button>
+                                </div>
+                            </div>
+                        </div>
+
                     </div>
-                    <div class="row">
-                        <div class="col-sm-6" style="padding-right: 50px;">
-                            <label class="label-normal">Giá</label>
-                            <input class="input-normal" type="text" placeholder="Nhập giá khóa học">
+                    <div class="col-sm-4">
+                        <div class="box-content" style="padding: 20px 30px 10px 30px !important;">
+                            <div class="row">
+                                <div class="col-sm-6">
+                                    <div class="order-id">
+                                        Tổng hóa đơn
+                                    </div>
+                                </div>
+                                <div class="col-sm-6 text-right">
+                                    <div class="order-o-price">599,000</div>
+                                    <div class="order-discount">0</div>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-sm-12 text-right">
+                                    <div class="order-price">599,000</div>
+                                </div>
+                            </div>
                         </div>
-                        <div class="col-sm-6" style="padding-left: 50px;">
-                            <label class="label-normal">Cover</label>
-                            <input type="file" id="upload-input" style="display:none;">
-                            <label for="upload-input" id="custom-upload">
-                                <span class="small-btn" style="padding: 10px 20px;">Chọn tệp</span>
-                                <span id="filename" style="margin-left: 15px; font-size: 14px;">Chưa chọn tệp</span>
-                            </label>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-sm-12">
-                            <label class="label-normal">Mô tả</label>
-                            <textarea class="input-normal" style="height: auto !important" rows="2" type="text" placeholder="Nhập mô tả"></textarea>
+                        <div style="width: 100%; text-align: center; margin-bottom: 20px;">
+                            <button id="checkout-submit" class="big-button" style="width: 100%; margin-top: 15px;">THANH
+                                TOÁN</button>
                         </div>
                     </div>
                 </div>
             </div>
+
+
+
         </div>
 
     </div>
@@ -245,7 +308,7 @@
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
     <script src="res/js/scripts.js"></script>
     <script src="res/js/tile.js"></script>
-    <script src="res/js/course-create.js"></script>
+    <script src="res/js/profile.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
         crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.12/handlebars.min.js"></script>
