--- a/ezlearning-frontend/public/index.html
+++ b/ezlearning-frontend/public/index.html
@@ -13,6 +13,8 @@
     <link href="/css/course-detail.css" rel="stylesheet" type="text/css">
     <link href="/css/lecture-detail.css" rel="stylesheet" type="text/css">
     <link href="/css/profile.css" rel="stylesheet" type="text/css">
+    <link href="/css/check-out.css" rel="stylesheet" type="text/css">
+    <link href="/css/cart.css" rel="stylesheet" type="text/css">
    
     <title>EzLearning</title>
 </head>
