--- a/ezlearning-frontend/UI/course-create.html
+++ b/ezlearning-frontend/UI/course-create.html
@@ -27,6 +27,10 @@
                         <img id="tmodal-failure" src="res/icons/modal-failure.png" width="47px" style="display: none; margin-bottom: 10px;">
                         <div class="tmodal-title"></div>
                         <div class="tmodal-msg"></div>
+                        <div class="tmodal-btn" style="margin-top: 30px; display: none;">
+                            <button id="tmodal-no" class="big-button" style="width: 48%; float: left; background: rgb(255, 58, 58); margin-right: 5px">HỦY</button>
+                            <button id="tmodal-yes" class="big-button" style="width: 48%; float: right; margin-left: 5px;">CÓ</button>
+                        </div>
                     </div>
                     <div id="addon" class="dropdown-addon tmodal-addon" style="display:none;">
                         <span id="addon-text">Tất cả khóa học</span>
